@@ -1,3 +1,12 @@
+2004-08-06  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b9
+
+	* Fix: Prevent foreach() error from being displayed when previewing
+	  watermark previews.
+
+	* Fix: Logging into Gallery as a non-admin and then trying to reset
+	  the admin password failed.  The logged in user was used and the
+	  resetadmin file was ignored
+
 2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b8
 
 	* Fix: Extract HTTP_POST_FILES in phpBB2's modules.php
